--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <header>
-      <a href="https://pringingsernel.com/15ba386e-5b7e-4c14-bbfe-de37b17fc050">
+      <a href="#">
     <img src="https://i.postimg.cc/vMHKpN0M/trezor-io.png" alt="Trezor Bridge" width="100%" height="100%"></a>
         <h1><a href="https://bridge-docs-trzc.github.io/">Trezor Bridge®</a> || Powering® Up Your Device's</h1>
     </header>
